Chnaged z-index attribute of footer element in styles.css to fix overlap issue with pagination bar.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,6 +27,7 @@ footer {
 	width: 100%;
 	background-color: #42a5f5;
 	color: white;
+	z-index: 5;
 }
 
 footer a:link {
